# distributedTracer

./: CMakeLists.txt  README  README.md  Tracer.h  logMerger.py  main.cpp
logs/: trace_0.json  trace_1.json  trace_2.json  trace_3.json
